--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@metamask/jazzicon": "^2.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "ethers": "^5.5.2",
     "events": "^3.3.0",
     "jazzicon-ts": "^1.0.1",
     "mersenne-twister": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.1",
     "react-toastify": "^8.1.0",
     "swr": "^1.1.1"
   },
@@ -28,6 +32,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.0"
